--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "multipage",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://site-vitrine-multipage.valdesagbokoni.com/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -17,7 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build&&gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
